2004-11-03  Pascal Obry  <pascal@obry.org>

	* framework.ads:
	Add a selected component for the register test.

	* register.out:
	Update output accordingly.

2004-11-02  Pascal Obry  <pascal@obry.org>

	* makefile:
	(ASIS2_TESTS): Add register.

	* framework.ads, register.ads, register.out:
	Initial revision.

	* wsdl_b.out:
	Update to new output.

2004-11-01  Pascal Obry  <pascal@obry.org>

	* file2.adb:
	Add binary data socket log.

	* test_soap.adb:
	Add text data socket log.

	* test_net_log.adb:
	(HW_CB): Add small delay to have more chance to get proper output.

2004-10-31  Pascal Obry  <pascal@obry.org>

	* test_net_log.adb:
	(HTTP_Log): Change to ensure constant output.

	* test_net_log.out:
	Update due to new output.

2004-10-31  Pascal Obry  <pascal@obry.org>

	* interoplab_main1.wsdl:
	Change service name to avoid conflic with Interoplab demo sources.

	* interoplab_main1.adb:
	Adjust calls to interoplab services due to change above.

	* makefile:
	Fix XMLADA test.
	(gen_main): Do not add ASIS test explicitly, those tests are
	 already part of the TESTS variable which is generated
	 automatically.
	(run): Remove specific checks for ASIS test. This is part of the
	 standard scheme now.
	($(GEN_SETUP1):): Removed, not used.
	($(GEN_SETUP2):): Idem.
	(setup_init): Idem.
	(setup): Fix check for ASIS+SOAP tests which prevented those tests
	 to be properly added into the generated files.

	* test_soap_hotplug.adb, test_soap_hotplug.out:
	Initial revision.

	* soap_hotplug_pack_service.ads,
	  soap_hotplug_pack_service-types.ads,
	  soap_hotplug_pack_service-types.adb,
	  soap_hotplug_pack_service-client.ads,
	  soap_hotplug_pack_service-client.adb,
	  soap_hotplug_pack_service-cb.ads,
	  soap_hotplug_pack_service-cb.adb,
	  soap_hotplug_pack_service-server.ads,
	  soap_hotplug_pack_service-server.adb:
	Initial revision.

	* wsdl_?.out:
	Renamed to wsdl_?_main.out.

	* wsdl_?_main.out:
	Renamed from wsdl_?.out.

	* test_hotplug.adb, test_hotplug.out: