@@ -1,3 +1,9 @@
+2004-11-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	test_hotplug.adb:
+	Print exception information on error.
+	More interval between ports to be able find a free port.
+
 2004-11-03  Pascal Obry  <pascal@obry.org>
 
 	* framework.ads:
